[package]
name = "irodori-extension-firebird"
version = "0.1.2"
edition = "2021"
license = "MIT OR 0BSD"
description = "Native Irodori Table connector extension for Firebird."
repository = "https://github.com/hjosugi/irodori-extension-firebird"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_firebird"
crate-type = ["cdylib", "rlib"]

[dependencies]
irodori-connector-abi = { git = "https://github.com/hjosugi/irodori-kit", tag = "v0.6.0" }
firebird-wire = "0.1.6"
serde_json = "1"

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
